# Apple1JS

./: .babelrc  .coderabbit.yaml  .dependency-cruiser.js  .editorconfig  .env  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .flowconfig  .gitignore  .jsbeautifyrc  .markdownlint.json  .mcp.json  .prettierrc  .worktreeinclude  6502.js  AI_USAGE.md  Apple.worker.js  Apple.worker.js.map  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Makefile.agents  README.md  SECURITY.md  agents.sh  babel.config.js  bundle.09c0233ffc377aef122d.js  bundle.0e5df052db2a955bed9a.js  bundle.1368948b42e38a113cde.js  bundle.141503ef239a85bccd34.js  bundle.22f8f9c81e8c3b50f95e.js  bundle.24d65c7b2e0acac30229.js  bundle.24d65c7b2e0acac30229.js.LICENSE.txt  bundle.52bfcc3ded9f9e4ed4d4.js  bundle.58c6d99291c5d3eded20.js  bundle.69799875a0a15440b35a.js  bundle.7109e7a551126dd35ffc.js  (+35 more)
.circleci/: config.yml
.claude/: README.md  git-workflow.md  pre-commit-check.sh  settings.json
.claude/agents/: wasm-engine-verifier.md
.claude/commands/: benchmark.md  debug-cpu.md  engine-test.md  full-check.md  perf-compare.md  quick-check.md  wasm-build.md
.claude/hooks.example/: post-edit.sh  protect-generated.sh
.claude/rules/: lcd-conventions.md
.claude/skills/: wasm-optimization.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml  main.yml  (+1 more)
coverage/: clover.xml  coverage-final.json  lcov.info
dist-web/: bundle.js
docs/: 6502-analysis.md  README.md  agent-orchestration.md  architectural_decisions.md  architecture.md  architecture_analysis.md  cpu_test_guidelines.md  cpu_timing_validation_report.md  performance_analysis.md  standardization-progress.md  type-consolidation-plan.md  type-hierarchy.md  ui_logging_refactor_design.md  ui_logging_summary.md  user_experience_analysis.md  woz_monitor_cheatsheet.md
js/: Apple.worker.js  bundle.js  bundle.js.LICENSE.txt
public/: index.html
scripts/: check-wasm-build.js  diagnose-cpu.mjs  fix-logging-tests.js  fix-vitest-types.cjs  migrate-to-vitest.cjs  migrate-to-vitest.js  patch-wasm-bindings.js  run-agents.js
src/: AppleWorker.ts  config.ts  const.ts  index-web.js  index-web.ts  index-web.tsx  index.css  index.html  index.js  index.ts  tsconfig.json  utils.js  version.ts  web.js
support/: README.md
wasm-cpu/: .gitignore  Cargo.toml
wasm-cpu/src/: bus.rs  cpu.rs  cpu_enhanced.rs  instructions.rs  instructions_bus_impl.rs  instructions_with_bus.rs  lib.rs  memory.rs  memory_bridge.rs  opcodes.rs  opcodes_with_bus.rs  ram.rs  rom.rs  system.rs
wasm-cpu/src/wasm/: apple1_cpu_wasm.d.ts  apple1_cpu_wasm.js  apple1_cpu_wasm_bg.wasm  apple1_cpu_wasm_bg.wasm.d.ts  package.json
(+502 files in other folders)
