[package]
name = "apple1-cpu-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Apple1JS Contributors"]
description = "High-performance WASM 6502 CPU emulator for Apple1JS"
license = "MIT"
repository = "https://github.com/stid/Apple1JS"

[package.metadata.wasm-pack]
# Disable wasm-opt due to compatibility issues with bulk memory operations
[package.metadata.wasm-pack.wasm-opt]
enabled = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
performance = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"

[profile.release]
# Optimize for speed
opt-level = 3
# Enable Link Time Optimization
lto = true
# Use one codegen unit for better optimization
codegen-units = 1
# Strip debug symbols for smaller size
strip = true

[profile.bench]
inherits = "release"