[package]
name = "apple1-cpu-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Apple1JS Contributors"]
description = "High-performance WASM 6502 CPU emulator for Apple1JS"
license = "MIT"
repository = "https://github.com/stid/Apple1JS"

# wasm-pack runs wasm-opt after wasm-bindgen. The previous `[package.metadata.wasm-pack]`
# key was the wrong shape for this wasm-pack version (silently ignored), so release builds
# tried a bare `-O` and failed on the module's bulk-memory ops. Use the profile-scoped key
# and explicitly enable bulk memory so wasm-opt succeeds.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3', '--enable-bulk-memory', '--enable-nontrapping-float-to-int']

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
performance = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.8"

[profile.release]
# Optimize for speed
opt-level = 3
# Enable Link Time Optimization
lto = true
# Use one codegen unit for better optimization
codegen-units = 1
# Strip debug symbols for smaller size
strip = true

[profile.bench]
inherits = "release"